UV snapping broken as of 3.0.0 (2d35eed34d) #89554

Closed
opened 2021-06-30 13:08:16 +02:00 by Keith Boshoff · 8 comments
Member

System Information
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.33.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.31

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-06-30 09:20, hash: be451354c9

Caused by fba9cd019f

Short description of error
I'm getting this error in the UV editor in the latest 3.0.0 alpha build:

location: <unknown location>:-1
WARN (bpy.rna): C:\Users\blender\git\blender-vdev\blender.git\source\blender\python\intern\bpy_rna.c:1505 pyrna_enum_to_py: current value '0' matches no enum in 'ToolSettings', '(null)', 'snap_uv_element'
Python: Traceback (most recent call last):
  File "\space_image.py", line 787, in draw
  File "\space_image.py", line 720, in draw_xform_template
KeyError: 'bpy_prop_collection[key]: key "" not found'

Exact steps for others to reproduce the error
This can be tested on a new scene: select the cube, open the UV editor and the header is incomplete, only showing the Pivot selector, and the above message is spammed to the system console.

**System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.33.9000 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 465.31 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-06-30 09:20, hash: `be451354c9` Caused by fba9cd019f **Short description of error** I'm getting this error in the UV editor in the latest 3.0.0 alpha build: ``` location: <unknown location>:-1 WARN (bpy.rna): C:\Users\blender\git\blender-vdev\blender.git\source\blender\python\intern\bpy_rna.c:1505 pyrna_enum_to_py: current value '0' matches no enum in 'ToolSettings', '(null)', 'snap_uv_element' Python: Traceback (most recent call last): File "\space_image.py", line 787, in draw File "\space_image.py", line 720, in draw_xform_template KeyError: 'bpy_prop_collection[key]: key "" not found' ``` **Exact steps for others to reproduce the error** This can be tested on a new scene: select the cube, open the UV editor and the header is incomplete, only showing the Pivot selector, and the above message is spammed to the system console.
Author
Member

Added subscriber: @Wahooney

Added subscriber: @Wahooney
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-06-30 14:18:15 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Will check.

Will check.

This issue was referenced by 0e4245bc28

This issue was referenced by 0e4245bc28e6aec90d02cf681c8ec0839e9f15e0
Member

Added subscribers: @iss, @mano-wii

Added subscribers: @iss, @mano-wii
Member

Caused by fba9cd019f

@mano-wii
@iss

Setting this to High priority so we dont get too many files saved with wrong flags in beetween.

Caused by fba9cd019f @mano-wii @iss Setting this to High priority so we dont get too many files saved with wrong flags in beetween.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:59:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89554
No description provided.